2013-05-28  Peter Bloomfield

	* configure.ac: check GtkSpell version, and avoid explicit
	dependence on enchant when possible.
	* src/sendmsg-window.c: use gtkspell_get_language_list when
	available, instead of enchant API.

2013-05-26  Peter Bloomfield

	* src/main-window.c: report network availability with a
	human-readable time; combine two idle callbacks into one.

2013-05-22  Peter Bloomfield

	Cast new mailboxes as LibBalsaMailbox, to reduce static and
	dynamic casting.

	* libbalsa/mailbox_imap.c (libbalsa_mailbox_imap_new): return
	new mailbox as (LibBalsaMailbox *).
	* libbalsa/mailbox_imap.h: ditto.
	* libbalsa/mailbox_local.c: ditto.
	* libbalsa/mailbox_local.h: ditto.
	* libbalsa/mailbox_maildir.c (libbalsa_mailbox_maildir_new):
	ditto.
	* libbalsa/mailbox_maildir.h: ditto.
	* libbalsa/mailbox_mbox.c (libbalsa_mailbox_mbox_new): ditto.
	* libbalsa/mailbox_mbox.h: ditto.
	* libbalsa/mailbox_mh.c (libbalsa_mailbox_mh_new): ditto.
	* libbalsa/mailbox_mh.h: ditto.
	* libinit_balsa/assistant_page_directory.c
	(unconditional_mailbox): remove static casts to (LibBalsaMailbox *).
	* src/mailbox-node.c (imap_scan_attach_mailbox),
	(balsa_mailbox_node_new_imap), (add_local_mailbox): avoid
	dynmaic casts to LIBBALSA_MAILBOX.

2013-05-22  Peter Bloomfield

	* src/balsa-message.c (part_info_init): do not mess with scroll
	bars.
	* src/balsa-mime-widget-text.c (balsa_mime_widget_new_text):
	ditto.

2013-05-22  Peter Bloomfield

	* src/sendmsg-window.c (create_info_pane): use
	create_email_or_string_entry for Fcc header.

2013-05-20  Peter Bloomfield

	* libbalsa/html.c: drop obsolete include.

2013-05-19  Peter Bloomfield

	Implement add-messages at LibBalsaMailboxLocal level, and use a
	new add-message method for the backends.

	* libbalsa/mailbox_local.c (libbalsa_mailbox_local_class_init):
	new add-messages method.
	* libbalsa/mailbox_local.h: new member
	LibBalsaMailboxLocalClass::add_message.
	* libbalsa/mailbox_maildir.c (libbalsa_mailbox_maildir_class_init),